# evidence_based_scheduling

./: .bazelignore  .bazelrc  .dockerignore  .editorconfig  .gitignore  .npmrc  .prettierignore  .travis.yml  AGENTS.md  BUILD  BUILD.bazel  Cargo.toml  Dockerfile  MODULE.bazel  Makefile  README.adoc  README.md  WORKSPACE  bake.hcl  bake.py  bake.ts  build.sh  compose.dev.yaml  compose.devcontainer.yaml  compose.prod.yaml  compose.yaml  dc.yaml  docker-compose.dev.yaml  docker-compose.prod.yaml  docker-compose.yaml  envoy.yaml  evidence_based_scheduling.code-workspace  evidence_based_scheduling.json  evidence_based_scheduling.py  gazelle_python.yaml  nginx.conf  oci.bzl  package-lock.json  package.json  pnpm-lock.yaml  (+9 more)
.aspect/cli/: config.yaml
.devcontainer/: devcontainer.json
.devcontainer/skel/: .bash_profile  .bashrc
.devcontainer/skel/dotfile/: .tigrc  common.bash
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot.yml
.sqlx/: query-1db4fa7751bf3fee574bd2d3b4e360961084ecf82de45c64b5e2e93e741f7fee.json  query-2d97266e8cd2b4d480a2483af2795ca1484618ccf3e5ff959023ed024d70f87e.json  query-3fa35be339ba34f78dec9a13411d09c7c8ebb288dcf7db85820061c9f1ec8376.json  query-454d110696c7c57c23791d787a14a998dea5fbaf7991b7f3727fea6a1f4a31c0.json  query-64bc6b387ed914992b5cd84556d8d9d20a4acc11e037db781b61df5be7f03462.json  query-6640cf41b4cb393f26bb1feb068490a5ce2c42fdaf3df2fe4d235c55a9a50dbd.json  query-86eec550244957f566f2dc93e0640d366d90339ee5882f07d02ea7db02e8adf7.json  query-878026c6a87ec052ddfc719cbc2564900ea975bdeb8fa6a704036dddca94b9a1.json  query-9659a21257e2419799d78d68dee2ebfb878f7cb90737da3f7fd3ddee9837a8c8.json  query-a55edf7a30fd729ef9f0cf2ef6271eae46d3f8de6afe5ff3248dcb0b3fbc44e1.json  query-ad2d9e2526a98881b646425628a6befacccfa674e6588a84224031ab1ffdee7b.json  query-df1df99cf5317b24d3807e1d716da9e069c9413d0ce18f18bf821475e00fd781.json  query-ee40779baf412293e234d858bec65dd9d100fa8b2e2f0c870a4c047097fd4739.json  query-f883c805b6353765df6124289192c29b6931eefb34282f321101dc5e792da88b.json
api/: README.adoc  pyproject.toml
api/alembic/: env.py
api/api/: apps.py  apps_test.py  crud.py  database.py  main.py  models.py  schemas.py  static_files.py
api/scripts/: check.sh  run.sh
api_v2/: BUILD  BUILD.bazel  Cargo.toml
api_v2/src/: db.rs  errors.rs  gen.rs  lib.rs  main.rs  openapi.rs  routes.rs
backend/: README.adoc  pyproject.toml
backend/src/: crud.py  database.py  main.py  models.py  schemas.py
client/: .dir-locals.el  .npmrc  .prettierignore  BUILD  index.html  openapi-generator-cli.yaml  package-lock.json  package.json  playwright-ct.config.ts  tailwind.config.cjs  tsconfig.json  vite.config.ts
client/public/: index.html  manifest.json
client/scripts/: check.sh
client/src/: AddButton.tsx  CalendarEventForm.tsx  DoneOrDontToTodoButton.tsx  EntryButtons.tsx  EntryInfos.tsx  EntryWrapper.tsx  EstimationInput.tsx  EvalButton.tsx  LastRange.tsx  MenuButton.tsx  PlannedEvents.tsx  QueueEntry.tsx  ScrollBackToTopButton.tsx  StartOrStopButtons.tsx  TextArea.tsx  TodoToDoneButton.tsx  TodoToDontButton.tsx  TotalTime.tsx  actions.ts  auth.ts  checks.ts  client.ts  commonTypes2.ts  common_types1.ts  components.tsx  consts.tsx  db.ts  distribution_predictor.ts  hooks.ts  index.tsx  intervals.spec.ts  intervals.ts  lib.css  lib.test.tsx  lib.tsx  main.tsx  multiset.spec.ts  multiset.test.ts  multiset.ts  next_action_predictor.spec.ts  (+41 more)
client/src/AutoHeightTextArea/: index.module.css  index.tsx
client/src/Calendar/: AddButton.tsx  index.tsx
client/src/ChildEdgeTable/: index.tsx
client/src/CopyNodeIdButton/: index.tsx
client/src/EdgeRow/: index.tsx
client/src/GanttChart/: index.tsx
client/src/Header/MenuButton/: index.tsx
client/src/ParentEdgeTable/: index.tsx
client/src/RangesTable/: index.tsx
client/src/ShowDetailsButton/: index.tsx
client/src/ShowGanttToggle/: index.tsx
client/src/StartButton/: index.tsx
client/src/StartConcurrentButton/: index.tsx
client/src/StopButton/: index.tsx
client/src/TocForm/: index.tsx
client/src/TocForm/Component/: index.tsx
client/src/ToggleButton/: index.tsx
client/src/TogglePinButton/: index.tsx
client/src/TopButton/: index.tsx
client/src/actions/: index.ts
client/src/client/: index.ts
client/src/client/.openapi-generator/: FILES
client/src/client/apis/: DefaultApi.ts
client/src/client/models/: Data.ts  Etag.ts  EtagHeader.ts  EtagPathHeader.ts  HBEmptyHeaderListApiSchemasPatch.ts  HBEtagHeaderData.ts  HBEtagPathHeaderIntValue.ts  HBPathHeaderPatch.ts  Header.ts  IfMatch.ts  (+5 more)
client/src/components/: index.tsx
client/src/generated_client/: index.ts
client/src/states/: index.ts
codegen/root/.github/: dependabot.yml.gen.py
db/migrations/: 00000000000000_create_app_user.sql  20230218162542_create_tables.sql
db/queries/: api.sql
db/scripts/: migrate.sh
go/: go.mod  go.sum
go/api_v1/: main.go
go/idgens/: idgens.go  idgens_test.go
grpc_py/: pyproject.toml
id_generator/: BUILD  Cargo.toml
id_generator/src/: lib.rs
openapi/: api_v2.yaml
openapi_codegen/: BUILD.bazel  pyproject.toml
openapi_codegen/app/: BUILD.bazel  __init__.py  __main__.py
openapi_codegen/src/app/: __init__.py
proto/: api_v1.proto  buf.gen-client.yaml  buf.gen-go.yaml  buf.go.yaml
proto/api/v1/: api.proto
public/: evidence_based_scheduling.json  index.html
py/: BUILD.bazel  gazelle_python.yaml  pyproject.toml
py/openapi_codegen/main/: __main__.py
scripts/: bazel.sh  build_test_push.sh  launch.sh  publish_manifests.sh  run_and_curl.sh
src/: checks.ts  consts.ts  consts.tsx  index.css  index.js  index.test.js  index.tsx  lib.css  lib.test.tsx  lib.tsx  next_action_predictor.test.ts  next_action_predictor.ts  ops.test.ts  ops.ts  rtk.ts  toast.tsx  types.ts  types14.ts  undoable.ts  utils.ts
tests/e2e/: README.adoc  package-lock.json  package.json  pyproject.toml
tests/e2e/src/: conftest.py  e2e_test.py  server_test.py
tests/server/: Dockerfile  pyproject.toml
tests/server/src/: conftest.py  walkthrough_test.py
tools/: BUILD.bazel  extract_ruff.py  lint.bzl
(+64 files in other folders)
