[tool.poetry.dependencies]
python = ">=3.9.5,<3.12"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
ruff = "^0.0.278"

[tool.poetry]
name = "evidence_based_scheduling"
version = "1.0.0"
description = ""
authors = ["Your Name <you@example.com>"]
exclude = ["./**/conftext.py", "./**/*_test.py"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
exclude = [
    "**/gen/"
]
ignore = [
    "E501",
]
select = [
    # "D",
    "E",
    "F",
    "I001",
    "W",
]

# [tool.ruff.pydocstyle]
# convention = "google"
