[tool.poetry.dependencies]
python = ">=3.9.5,<3.12"

[tool.poetry.group.dev.dependencies]
black = "^23.10.1"
ruff = "^0.1.3"

[tool.poetry]
name = "evidence_based_scheduling"
version = "1.0.0"
description = ""
authors = ["Your Name <you@example.com>"]
exclude = ["./**/conftext.py", "./**/*_test.py"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
extend-exclude = ".*/gen/"

[tool.ruff]
extend-exclude = [
    "**/gen"
]
ignore = [
    # TODO: Remove `D1`.
    "D100", # https://beta.ruff.rs/docs/rules/undocumented-public-module/
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107", # https://beta.ruff.rs/docs/rules/undocumented-public-init/
    "D4",
    "E501",
    "PTH206", # https://beta.ruff.rs/docs/rules/os-sep-split/
    "S101", # https://beta.ruff.rs/docs/rules/assert/
    "S110", # https://beta.ruff.rs/docs/rules/try-except-pass/
    "S112", # https://beta.ruff.rs/docs/rules/try-except-continue/
    "S602", # https://beta.ruff.rs/docs/rules/subprocess-popen-with-shell-equals-true/
]
select = [
    "ANN",
    "ARG",
    "ASYNC",
    "D",
    "E",
    "F",
    "I001",
    "ISC001",
    "N",
    "NPY",
    "PL",
    "PTH",
    "RUF",
    "S",
    "UP",
    "W",
    "YTT",
]

[tool.ruff.pydocstyle]
convention = "google"
