[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py"
version = "1.0.0"
dependencies = ["pydantic~=2.7", "pyyaml~=6.0"]
requires-python = "==3.12.4"
authors = [{ name = "kshramt", email = "kshramt@example.com" }]
description = "Evidence Based Scheduling"
license = { file = "LICENSE.txt" }
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python",
]

[project.optional-dependencies]
dev = ["ruff"]

[tool.setuptools]
packages = []

[tool.ruff]
extend-exclude = ["gen/", "external/"]
force-exclude = true
ignore = [
    # TODO: Remove `D1`.
    "D100",   # https://beta.ruff.rs/docs/rules/undocumented-public-module/
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",   # https://beta.ruff.rs/docs/rules/undocumented-public-init/
    "D4",
    "E501",
    "PTH206", # https://beta.ruff.rs/docs/rules/os-sep-split/
    "S101",   # https://beta.ruff.rs/docs/rules/assert/
    "S110",   # https://beta.ruff.rs/docs/rules/try-except-pass/
    "S112",   # https://beta.ruff.rs/docs/rules/try-except-continue/
    "S602",   # https://beta.ruff.rs/docs/rules/subprocess-popen-with-shell-equals-true/
]
select = [
    "ANN",
    "ARG",
    "ASYNC",
    "D",
    "E",
    "F",
    "I001",
    "ISC001",
    "N",
    "NPY",
    "PL",
    "PTH",
    "RUF",
    "S",
    "UP",
    "W",
    "YTT",
]

[tool.ruff.format]
exclude = ["gen"]


[tool.ruff.pydocstyle]
convention = "google"

[tool.uv]
python-preference = "only-managed"
