[tool.isort]
profile = 'black'
multi_line_output = 3

[tool.mypy]
# plugins = "numpy.typing.mypy_plugin"
check_untyped_defs = true
show_error_codes = true
warn_return_any = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
  "sqlalchemy",
  "sqlalchemy.engine",
  "sqlalchemy.ext",
  "sqlalchemy.ext.asyncio",
  "sqlalchemy.orm",
  "sqlalchemy.types",
  "jsonpatch",
  "zstd",
]
ignore_missing_imports = true

[tool.poetry.dependencies]
python = ">=3.9.5,<3.11"
fastapi = "^0.79.0"
uvicorn = "^0.18.2"
SQLAlchemy = "^1.4.39"
aiosqlite = "^0.17.0"
jsonpatch = "^1.32"
zstd = "^1.5.2"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
pyflakes = "^2.4.0"
isort = "^5.10.1"
mypy = "^0.961"
alembic = "^1.8.1"
pytest = "^7.1.2"
httpx = "^0.23.0"
pytest-asyncio = "^0.19.0"

[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
exclude = ["./**/conftext.py", "./**/*_test.py"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
