[tool.isort]
profile = 'black'
multi_line_output = 3

[tool.mypy]
# plugins = "numpy.typing.mypy_plugin"
check_untyped_defs = true
enable_recursive_aliases = true
show_error_codes = true
warn_return_any = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
  "sqlalchemy",
  "sqlalchemy.engine",
  "sqlalchemy.ext",
  "sqlalchemy.ext.asyncio",
  "sqlalchemy.orm",
  "sqlalchemy.types",
  "jsonpatch",
  "zstd",
]
ignore_missing_imports = true

[tool.poetry.dependencies]
python = ">=3.9.5,<3.12"
fastapi = "^0.85.0"
uvicorn = "^0.19.0"
SQLAlchemy = "^1.4.42"
aiosqlite = "^0.17.0"
jsonpatch = "^1.32"
zstd = "^1.5.2"
starlette = "^0.20.0"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
pyflakes = "^2.5.0"
isort = "^5.10.1"
mypy = "^0.982"
alembic = "^1.8.1"
pytest = "^7.2.0"
httpx = "^0.23.0"
pytest-asyncio = "^0.20.0"

[tool.poetry.group.dev.dependencies]
python-lsp-server = "^1.7.0"
mypy-ls = "^0.5.1"
pyls-isort = "^0.2.2"
isort = "^5.11.4"
black = "^22.12.0"
mypy = "^0.991"

[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
exclude = ["./**/conftext.py", "./**/*_test.py"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
