[tool.isort]
profile = 'black'
multi_line_output = 3

[tool.mypy]
plugins = [
  "pydantic.mypy",
  "sqlalchemy.ext.mypy.plugin",
]
check_untyped_defs = true
show_error_codes = true
warn_return_any = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
  "jsonpatch",
  "zstd",
]
ignore_missing_imports = true

[tool.poetry.dependencies]
python = ">=3.9.5,<3.12"
fastapi = "^0.85.0"
uvicorn = "^0.19.0"
SQLAlchemy = "^2.0.1"
aiosqlite = "^0.17.0"
jsonpatch = "^1.32"
zstd = "^1.5.2"
starlette = "^0.20.0"

[tool.poetry.group.dev.dependencies]
alembic = "^1.8.1"
black = "^22.12.0"
httpx = "^0.23.0"
isort = "^5.11.4"
mypy = "^0.991"
mypy-ls = "^0.5.1"
pyflakes = "^2.5.0"
pyls-isort = "^0.2.2"
pytest = "^7.2.0"
pytest-asyncio = "^0.20.0"
python-lsp-server = "^1.7.0"

[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
exclude = ["./**/conftext.py", "./**/*_test.py"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
