[package]
name = "api_v2"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
async-trait = "0.1.74"
axum = { version = "0.7.1", features = ["headers", "macros", "tracing"] }
base64 = "0.21.5"
chrono = { version = "0.4.31", features = ["serde"] }
hyper = { version = "1.0.1", features = ["full"] }
id_generator = { path = "../id_generator" }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "postgres", "macros", "uuid", "chrono", "json"] }
tokio = { version = "1.34.0", features = ["full"] }
tower = "0.4.13"
