[tool.isort]
profile = 'black'
multi_line_output = 3

[tool.mypy]
plugins = [
  "pydantic.mypy",
  "sqlalchemy.ext.mypy.plugin",
]
show_error_codes = true
strict = true

[[tool.mypy.overrides]]
module = [
]
ignore_missing_imports = true

[tool.poetry.dependencies]
python = ">=3.9.5,<3.12"
grpcio-tools = "^1.51.3"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
isort = "^5.11.4"
mypy = "^0.991"
mypy-ls = "^0.5.1"
pyflakes = "^2.5.0"
pyls-isort = "^0.2.2"
pytest = "^7.2.0"
pytest-asyncio = "^0.20.0"
python-lsp-server = "^1.7.0"
python-lsp-black = "^1.2.1"

[tool.poetry]
name = "grpc_py"
version = "1.0.0"
description = ""
authors = ["Your Name <you@example.com>"]
exclude = ["./**/conftext.py", "./**/*_test.py"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
