[tool.mypy]
plugins = [
]
show_error_codes = true
strict = true

[[tool.mypy.overrides]]
module = [
]
ignore_missing_imports = true

[tool.poetry.dependencies]
python = ">=3.9.5,<3.12"
grpcio-tools = "^1.59.2"

[tool.poetry.group.dev.dependencies]
mypy = "^1.7.1"
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"

[tool.poetry]
name = "grpc_py"
version = "1.0.0"
description = ""
authors = ["Your Name <you@example.com>"]
exclude = ["./**/conftext.py", "./**/*_test.py"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
