load("@aspect_rules_lint//format:defs.bzl", "multi_formatter_binary")
load("@aspect_rules_lint//lint:shellcheck.bzl", "shellcheck_binary")
load("@npm//:eslint/package_json.bzl", eslint_bin = "bin")
load("@npm//:prettier/package_json.bzl", prettier = "bin")
load("@pip//:requirements.bzl", "whl_requirement")
load("@rules_python//python:defs.bzl", "py_binary", "py_library")

package(default_visibility = ["//:__subpackages__"])

alias(
    name = "terraform",
    actual = select({
        "@bazel_tools//src/conditions:linux": "@terraform_linux_x86_64//:terraform",
        "@bazel_tools//src/conditions:darwin_arm64": "@terraform_macos_aarch64//:terraform",
        "@bazel_tools//src/conditions:darwin_x86_64": "@terraform_macos_x86_64//:terraform",
    }),
)

py_binary(
    name = "ruff_extractor",
    srcs = ["extract_ruff.py"],
    main = "extract_ruff.py",
)

genrule(
    name = "extract_ruff",
    srcs = [whl_requirement("ruff")],
    outs = ["ruff"],
    cmd = "$(location :ruff_extractor) $(locations {}) $@".format(whl_requirement("ruff")),
    executable = True,
    tools = [
        ":ruff_extractor",
    ],
)

prettier.prettier_binary(
    name = "prettier",
    # Allow the binary to be run outside bazel
    env = {"BAZEL_BINDIR": "."},
)

# alias(
#     name = "shfmt",
#     actual = select({
#         "@bazel_tools//src/conditions:linux_x86_64": "@shfmt_linux_x86_64//file:shfmt",
#         "@bazel_tools//src/conditions:linux_aarch64": "@shfmt_linux_aarch64//file:shfmt",
#         "@bazel_tools//src/conditions:darwin_arm64": "@shfmt_darwin_aarch64//file:shfmt",
#         "@bazel_tools//src/conditions:darwin_x86_64": "@shfmt_darwin_x86_64//file:shfmt",
#     }),
# )

eslint_bin.eslint_binary(name = "eslint")

# bazel run :shellcheck -- --help
shellcheck_binary(name = "shellcheck")

multi_formatter_binary(
    name = "format",
    javascript = ":prettier",
    python = ":ruff",
    # sh = ":shfmt",
    sql = ":prettier",
    starlark = "@buildifier_prebuilt//:buildifier",
    terraform = ":terraform",
)

py_library(
    name = "tools",
    srcs = ["extract_ruff.py"],
    visibility = ["//:__subpackages__"],
)
