[tool.mypy]
plugins = []
show_error_codes = true
strict = true

[[tool.mypy.overrides]]
module = [
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.poetry]
name = "src"
version = "1.0.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "AGPL"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pytest = "^8.2.0"
httpx = "^0.27.0"
playwright = "^1.43.0"
pytest-asyncio = "^0.23.6"

[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
