[project]
name = "src"
version = "1.0.0"
dependencies = ["pytest ~= 8.2.2","httpx ~= 0.28.1","playwright ~= 1.43.0","pytest-asyncio ~= 0.23.7"]
requires-python = "==3.12.4"
authors = [{ name = "kshramt", email = "kshramt@example.com" }]
description = "Evidence Based Scheduling"
license = { file = "LICENSE.txt" }
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python",
]

[dependency-groups]
dev = [
    "mypy>=1.13.0",
]

[tool.mypy]
plugins = []
show_error_codes = true
strict = true

[[tool.mypy.overrides]]
module = [
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
